# cleanflow

./: README.md  TODO.md  Untitled Diagram.drawio  cleanflow.c  cleanflow.h  meson.build
clean/: meson.build
clean/inc/: clean.h
clean/lib/: log.h  queue.h
clean/src/: main.c
detect/: meson.build
detect/src/: main.c
include/: log.h
lib/: log_ratelimit.c  log_ratelimit.h
